--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     <div class="space_between"> <span>CSS</span>  <span>90%</span>  </div>
                     <progress class="value" max="100" value="90"></progress>
                     <span class="sub_header" >Уверенно владею , использую Float , Flexbox, Grid для выравнивания блоков. В процессе изучения препроцессора SASS(SCSS).</span>
-                    <div class="space_between"> <span>JavaScript</span>  <span>60%</span>  </div>
-                    <progress class="value" max="100" value="60"></progress>
-                    <span class="sub_header" >Cоздание и редактирование не сильно сложных скриптов.</span>
+                    <div class="space_between"> <span>JavaScript</span>  <span>85%</span>  </div>
+                    <progress class="value" max="100" value="85"></progress>
+                    <span class="sub_header" >Уверенные знания от примитивов до асинхронных запросов на сервер</span>
                     <div class="space_between"> <span>Photoshop/Figma</span>  <span>50%</span>  </div>
                     <progress class="value" max="100" value="50"></progress>
                     <span class="sub_header" >На уровне вырезания изображений, работа со слоями, определение размеров, цветов, шрифтов и т.п.</span>
