add code link and fix css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Учился в Польше по направлению "Прикладная информатика",
             где получил начальные знания о клиентсткой и серверной разработке web-приложений, которые сейчас расширяю.
             На данный момент не имел комерческого опыта разработки веб приложений и работы в смежных сферах.
-            <br>Есть огромное желание развиваться и совершенствовать свои навыки, сейчас активно учу Reacr JS,
+            <br>Есть огромное желание развиваться и совершенствовать свои навыки, сейчас активно учу React JS,
             очень понравилось создавать логику сайта на JS,
             размышление над всевозможными алгоритмами для реализации различных задачь.
             В свободное время решаю задачи на codewars.com.</p>
@@ -130,63 +130,63 @@
 
   </div>
 
-</div>
 
-</div>
-
-
-<div id="my_works" class="works_heading">
-  <h2 class="blue">My Works</h2>
-</div>
-<div class="my_works_container"><!-- My portfolio -->
-  <div class="my_works">
-    <div class="toDo">
-      <h3 class="toDo_heading">To Do React App</h3>
-      <div class="toDo_img">
-        <a href="https://andrsvsrg.github.io/"><img src="./img/ReactToDo.jpg" alt="site_photograph" width="100%" ></a>
-      </div>
-      <p>
-        Создан для закрепления знаний на React.
-      </p>
-    </div>
-
-    <div class="game">
-      <h3 class="game_heading">Memory Game</h3>
-      <div class="game_img">
-        <a href="https://andrsvsrg.github.io/game/"><img src="./img/game.jpg" alt="site_photograph" width="100%" ></a>
-      </div>
-      <p>
-        Создан для закрепления знаний JS.
-      </p>
-    </div>
+  <div id="my_works" class="works_heading">
+    <h2 class="blue">My Works</h2>
   </div>
-  <div class="my_works">
-
-    <div class="golden">
-      <h3 class="golden_heading">Golden</h3>
-      <div class="golden_img">
-        <a href="https://andrsvsrg.github.io/golden/"><img src="./img/golden.jpg" alt="site_golden" width="100%" ></a>
+  <div class="my_works_container"><!-- My portfolio -->
+    <div class="my_works">
+      <div class="toDo">
+        <h3 class="toDo_heading">To Do React App</h3>
+        <div class="toDo_img">
+          <a href="https://andrsvsrg.github.io/"><img src="./img/ReactToDo.jpg" alt="site_photograph" width="100%"></a>
+        </div>
+        <p>
+          Создан для закрепления знаний на React. <a href="https://github.com/andrsvsrg/reactToDo/tree/copyForComment">Code</a>
+        </p>
       </div>
-      <p>Создан для развития навыков верстальщика с бесплатного шаблна PSD <br>
-        (Все картинки кликабельны с ссылкой на GitHub)</p>
-    </div>
-    <div class="photograph">
 
-      <h3 class="photograph_heading">Photograph</h3>
-      <div class="photograph_img">
-        <a href="https://andrsvsrg.github.io/photograf/"><img src="./img/Photog.jpg" alt="site_photograph"
-                                                              width="100%" ></a>
+      <div class="game">
+        <h3 class="game_heading">Memory Game</h3>
+        <div class="game_img">
+          <a href="https://andrsvsrg.github.io/game/"><img src="./img/game.jpg" alt="site_photograph" width="100%"></a>
+        </div>
+        <p>
+          Создан для закрепления знаний JS.
+          <a href="https://github.com/andrsvsrg/game">Code</a>
+        </p>
       </div>
-      <p>Создан для развития навыков верстальщика для друга фотографа по общим наработкам,
-        адаптирован под мобильные устройства.
-      </p>
     </div>
+    <div class="my_works">
+
+      <div class="golden">
+        <h3 class="golden_heading">Golden</h3>
+        <div class="golden_img">
+          <a href="https://andrsvsrg.github.io/golden/"><img src="./img/golden.jpg" alt="site_golden" width="100%"></a>
+        </div>
+        <p>
+          Создан для развития навыков верстальщика с бесплатного шаблна PSD
+          <a href="https://github.com/andrsvsrg/golden">Code</a><br>
+        </p>
+      </div>
+      <div class="photograph">
+
+        <h3 class="photograph_heading">Photograph</h3>
+        <div class="photograph_img">
+          <a href="https://andrsvsrg.github.io/photograf/">
+          <img src="./img/Photog.jpg" alt="site_photograph" width="100%"></a>
+        </div>
+        <p>Создан для развития навыков верстальщика для друга фотографа по общим наработкам,
+          адаптирован под мобильные устройства.
+          <a href="https://github.com/andrsvsrg/photograf">Code</a>
+        </p>
+      </div>
+    </div>
+
   </div>
-
 </div>
 
 
-</div>
 
 </body>
 <script>
