--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="text">
           <h1>Hi I`M <span class="blue"> Sergey Androsov</span></h1>
           <h4 class="gray">Web-developer </h4>
-          <p> Привет! Я Сергей Андросов, начинающий Веб-верстальщик.
+          <p> Привет! Я Сергей Андросов, начинающий Веб-разработчик.
             Учился в Польше по направлению "Прикладная информатика",
             где получил начальные знания о клиентсткой и серверной разработке web-приложений, которые сейчас расширяю.
             На данный момент не имел комерческого опыта разработки веб приложений и работы в смежных сферах.
