update todo link project

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="toDo">
         <h3 class="toDo_heading">To Do React App</h3>
         <div class="toDo_img">
-          <a href="https://andrsvsrg.github.io/"><img src="./img/ReactToDo.jpg" alt="site_photograph" width="100%"></a>
+          <a href="https://andrsvsrg.github.io/reactToDo/"><img src="./img/ReactToDo.jpg" alt="site_photograph" width="100%"></a>
         </div>
         <p>
           Создан для закрепления знаний на React. <a href="https://github.com/andrsvsrg/reactToDo/tree/copyForComment">Code</a>
