add new project and update skills

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             Учился в Польше по направлению "Прикладная информатика",
             где получил начальные знания о клиентсткой и серверной разработке web-приложений, которые сейчас расширяю.
             На данный момент не имел комерческого опыта разработки веб приложений и работы в смежных сферах.
-            <br>Есть огромное желание развиваться и совершенствовать свои навыки, сейчас активно учу React JS,
-            очень понравилось создавать логику сайта на JS,
+            <br>Есть огромное желание развиваться и совершенствовать свои навыки, сейчас активно учу Redux и TypeScript.
+            Очень понравилось создавать логику сайта на JS,
             размышление над всевозможными алгоритмами для реализации различных задачь.
             В свободное время решаю задачи на codewars.com.</p>
         </div>
@@ -146,6 +146,16 @@
         </p>
       </div>
 
+      <div class="toDo">
+        <h3 class="toDo_heading">Interactive Map</h3>
+        <div class="toDo_img">
+          <a href="https://andrsvsrg.github.io/dev-challenge/"><img src="./img/map.jpg" alt="site_map" width="100%"></a>
+        </div>
+        <p>
+          Создан во время IT соревнований DEV-Challenge, на Vanilla JS без каких либо библиотек. <a href="https://github.com/andrsvsrg/dev-challenge">Code</a>
+        </p>
+      </div>
+
       <div class="game">
         <h3 class="game_heading">Memory Game</h3>
         <div class="game_img">
@@ -156,8 +166,6 @@
           <a href="https://github.com/andrsvsrg/game">Code</a>
         </p>
       </div>
-    </div>
-    <div class="my_works">
 
       <div class="golden">
         <h3 class="golden_heading">Golden</h3>
@@ -174,13 +182,17 @@
         <h3 class="photograph_heading">Photograph</h3>
         <div class="photograph_img">
           <a href="https://andrsvsrg.github.io/photograf/">
-          <img src="./img/Photog.jpg" alt="site_photograph" width="100%"></a>
+            <img src="./img/Photog.jpg" alt="site_photograph" width="100%"></a>
         </div>
         <p>Создан для развития навыков верстальщика для друга фотографа по общим наработкам,
           адаптирован под мобильные устройства.
           <a href="https://github.com/andrsvsrg/photograf">Code</a>
         </p>
       </div>
+    </div>
+    <div class="my_works">
+
+
     </div>
 
   </div>
