add new project and update skills

--- a/index.html
+++ b/index.html
@@ -36,27 +36,26 @@
       </div>
       <div class="information">
         <div class="text">
-          <h1>Hi I`M <span class="blue"> Sergey Androsov</span></h1>
-          <h4 class="gray">Web-developer </h4>
-          <p> Привет! Я Сергей Андросов, начинающий Веб-разработчик.
-            Учился в Польше по направлению "Прикладная информатика",
-            где получил начальные знания о клиентсткой и серверной разработке web-приложений, которые сейчас расширяю.
-            На данный момент не имел комерческого опыта разработки веб приложений и работы в смежных сферах.
-            <br>Есть огромное желание развиваться и совершенствовать свои навыки, сейчас активно учу Redux и TypeScript.
-            Очень понравилось создавать логику сайта на JS,
-            размышление над всевозможными алгоритмами для реализации различных задачь.
-            В свободное время решаю задачи на codewars.com.</p>
+          <h1>Hi I`M <span class="blue">Sergey Androsov</span></h1>
+          <h4 class="gray">JavaScript-developer</h4>
+          <p> Вітаю! Розкажу трохи про себе, навчався в Польщі за напрямом "Прикладна інформатика",
+            де отримав початкові знання про клієнтську та серверну розробку web-додатків, зараз зупинився на Frontend частині,
+            в яку інтенсивно занурююсь.
+            <br>Є величезне бажання розвиватися та вдосконалювати свої навички, зараз активно вивчаю TypeScript.
+            Дуже сподобалося створювати логіку сайту на JS,
+            роздуми над всілякими алгоритмами для реалізації різних завдань.
+            У вільний час я вирішую завдання на codewars.com.</p>
         </div>
         <div class="contact">
           <div class="column1">
             <table>
               <tr>
-                <td class="gray">Возраст:</td>
+                <td class="gray">Вік:</td>
                 <td> 27</td>
               </tr>
               <tr>
-                <td class="gray">Место проживания:</td>
-                <td> Киев</td>
+                <td class="gray">Місце проживання:</td>
+                <td> Київ</td>
               </tr>
               <tr>
                 <td class="gray">Email:</td>
@@ -67,7 +66,7 @@
           <div class="column2">
             <table>
               <tr>
-                <td class="gray">Номер телефона:</td>
+                <td class="gray">Номер телефону:</td>
                 <td>&nbsp<a href="tel:+380965445283">+380965445283</a></td>
               </tr>
               <tr>
@@ -93,23 +92,27 @@
       <div class="skills_content">
         <div class="space_between"><span>HTML</span> <span>90%</span></div>
         <progress class="value" max="100" value="90"></progress>
-        <span class="sub_header"> Уверенно владею языком разметки</span>
+        <span class="sub_header"> Впевнено володію мовою розмітки</span>
 
         <div class="space_between"><span>CSS</span> <span>90%</span></div>
         <progress class="value" max="100" value="90"></progress>
-        <span class="sub_header">Уверенно владею , использую Float , Flexbox, Grid для выравнивания блоков. В процессе изучения препроцессора SASS(SCSS).</span>
+        <span class="sub_header">Впевнено володію, використовую Float, Flexbox, Grid для вирівнювання блоків. У процесі вивчення препроцесора SASS(SCSS).</span>
 
         <div class="space_between"><span>JavaScript</span> <span>90%</span></div>
         <progress class="value" max="100" value="90"></progress>
-        <span class="sub_header">Уверенные знания от примитивов до асинхронных запросов на сервер</span>
+        <span class="sub_header">Впевнені знання від примітивів до асинхронних запитів на сервер</span>
 
-        <div class="space_between"><span>React JS</span> <span>60%</span></div>
+        <div class="space_between"><span>React + Redux</span> <span>70%</span></div>
+        <progress class="value" max="100" value="70"></progress>
+        <span class="sub_header">Вивчив усі основні хуки та функціональні компоненти</span>
+
+        <div class="space_between"><span>ООП та патерни проектування </span> <span>60%</span></div>
         <progress class="value" max="100" value="60"></progress>
-        <span class="sub_header">Изучил все основные хуки и функциональные компоненты</span>
+        <span class="sub_header">Володію знаннями про принципи ООП та основні патерни проектування</span>
 
-        <div class="space_between"><span>Photoshop/Figma</span> <span>50%</span></div>
-        <progress class="value" max="100" value="50"></progress>
-        <span class="sub_header">На уровне вырезания изображений, работа со слоями, определение размеров, цветов, шрифтов и т.п.</span>
+        <div class="space_between"><span>Figma</span> <span>70%</span></div>
+        <progress class="value" max="100" value="70"></progress>
+        <span class="sub_header">Впевнені знання навіть для створення дизайну сайту з нуля.</span>
 
 
       </div>
@@ -117,14 +120,14 @@
     <div class="additional_skills">
       <h3 class="additional_heading"> Additional Skills</h3>
 
-      <p>С университета хорошо знаком был с базами данных MySQL, выполнял задачи парсинга на PHP,
-        в данный момент активно развиваюсь в верстке и JS.<br>
+      <p>З університету добре знайомий був з базами даних MySQL, виконував завдання парсингу на PHP,
+        зараз активно розвиваюся в JS.<br>
       </p>
       <div class="language">
-        <div class="space_between language_space"><span>Польский язык</span> <span>80%</span></div>
+        <div class="space_between language_space"><span>Польська мова</span> <span>80%</span></div>
         <progress class="value" max="100" value="80"></progress>
-        <div class="space_between language_space"><span>Английский язык</span> <span>35%</span></div>
-        <progress class="value" max="100" value="35"></progress>
+        <div class="space_between language_space"><span>Англійська мова</span> <span>40%</span></div>
+        <progress class="value" max="100" value="40"></progress>
       </div>
     </div>
 
@@ -142,7 +145,17 @@
           <a href="https://andrsvsrg.github.io/reactToDo/"><img src="./img/ReactToDo.jpg" alt="site_photograph" width="100%"></a>
         </div>
         <p>
-          Создан для закрепления знаний на React. <a href="https://github.com/andrsvsrg/reactToDo/tree/copyForComment">Code</a>
+          Створений для закріплення знань на React + Redux. <a href="https://github.com/andrsvsrg/reactToDo/tree/copyForComment">Code</a>
+        </p>
+      </div>
+
+      <div class="toDo">
+        <h3 class="toDo_heading">Cad App</h3>
+        <div class="toDo_img">
+          <a href="https://andrsvsrg.github.io/cadUpdated/"><img src="./img/cad.jpg" alt="cad" width="100%"></a>
+        </div>
+        <p>
+          Найцікавіше тестове завдання, яке я вирішив масштабувати, основний наголос був на ООП та паттерни проектування. (Vanilla js) <a href="https://github.com/andrsvsrg/cadUpdated">Code</a>
         </p>
       </div>
 
@@ -152,7 +165,7 @@
           <a href="https://andrsvsrg.github.io/dev-challenge/"><img src="./img/map.jpg" alt="site_map" width="100%"></a>
         </div>
         <p>
-          Создан во время IT соревнований DEV-Challenge, на Vanilla JS без каких либо библиотек. <a href="https://github.com/andrsvsrg/dev-challenge">Code</a>
+          Створено під час IT змагань DEV-Challenge, на Vanilla JS без бібліотек. <a href="https://github.com/andrsvsrg/dev-challenge">Code</a>
         </p>
       </div>
 
@@ -162,7 +175,7 @@
           <a href="https://andrsvsrg.github.io/game/"><img src="./img/game.jpg" alt="site_photograph" width="100%"></a>
         </div>
         <p>
-          Создан для закрепления знаний JS.
+          Створений для закріплення знань JS та практики з алгоритмами.
           <a href="https://github.com/andrsvsrg/game">Code</a>
         </p>
       </div>
@@ -173,7 +186,7 @@
           <a href="https://andrsvsrg.github.io/golden/"><img src="./img/golden.jpg" alt="site_golden" width="100%"></a>
         </div>
         <p>
-          Создан для развития навыков верстальщика с бесплатного шаблна PSD
+          Створено для розвитку навичок верстальника з безкоштовного шаблону PSD
           <a href="https://github.com/andrsvsrg/golden">Code</a><br>
         </p>
       </div>
@@ -184,8 +197,8 @@
           <a href="https://andrsvsrg.github.io/photograf/">
             <img src="./img/Photog.jpg" alt="site_photograph" width="100%"></a>
         </div>
-        <p>Создан для развития навыков верстальщика для друга фотографа по общим наработкам,
-          адаптирован под мобильные устройства.
+        <p>Створено для розвитку навичок верстальника для друга фотографа за загальним напрацюванням,
+          адаптований під мобільні пристрої.
           <a href="https://github.com/andrsvsrg/photograf">Code</a>
         </p>
       </div>
